--- a/multiplatform-paging/src/androidMain/AndroidManifest.xml
+++ b/multiplatform-paging/src/androidMain/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.xhlab.multiplatform.paging" />
+<manifest package="kr.sparkweb.multiplatform.paging" />
